added meta name description

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="/src/assets/santiHead.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Santiago 'Santi' Mariani is a full-stack developer with expertise in JavaScript, React, Python, and FastAPI. Explore a diverse portfolio of projects focused on beautiful, user-friendly interfaces and strong backend functionality."
+    />
     <title>Hello, world! — I'm SANTI :)</title>
   </head>
   <body>
